# fittie

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements_dev.txt  sitemap.xml
.github/workflows/: create-release.yaml  docs.yml  publish.yml  tests-and-linting.yml
decoding/: index.html
development/contributing/: index.html
development/installing/: index.html
development/profile/: index.html
development/scripts/: index.html
development/testing/: index.html
docs/: decoding.md  index.md  iterating_data.md  utils.md
docs/development/: contributing.md  installing.md  profile.md  scripts.md  testing.md
docs/examples/: filtered_fields.md  highest_average_power.md  intensity.md  normalized_power.md
examples/: calculate_normalised_power.py  filtered_fields.py
examples/filtered_fields/: index.html
examples/highest_average_power/: index.html
examples/intensity/: index.html
examples/normalized_power/: index.html
fittie/: __init__.py  datastream.py  exceptions.py  protocols.py  util.py
fittie/fitfile/: README.md  __init__.py  crc.py  data_message.py  decode.py  definition_message.py  field_definitions.py  field_description.py  file.py  fitfile.py  header.py  records.py  util.py  utils.py
fittie/fitfile/profile/: README.md  __init__.py  base_types.py  field_type.py  fit_types.py  mesg_nums.py  message_profile.py  messages.py  util.py
fittie/fitfile/tests/: test_header.py  test_utils.py
fittie/fitfile/utils/: datastream.py  endianness.py
fittie/profile/: __init__.py  base_types.py  fit_types.py  message_profile.py  messages.py  util.py
fittie/utils/: __init__.py  datastream.py  enrich_data.py  gear_change_data.py  iterable.py
iterating_data/: index.html
scripts/: README.md  compile_readme.py  parse_profile.py
scripts/data/: Messages.csv  README.md  Types.csv
search/: search_index.json
tests/: conftest.py
tests/data/: fittie_chained_file.fit  fittie_developer_fields.fit  fittie_gearshifts.fit  fittie_minimal_file.fit  fittie_monitoring_file.fit  fittie_settings_file.fit
tests/fittie/fitfile/: test_crc.py  test_data_message.py  test_decode.py  test_definition_message.py  test_header.py  test_iterable.py  test_records.py  test_util.py
tests/fittie/fitfile/profile/: test_util.py
tests/fittie/fitfile/utils/: test_datastream.py  test_endianness.py
tests/fittie/utils/: test_datastream.py  test_endianness.py  test_enrich_data.py  test_gear_change_data.py  test_iterable.py
utils/: index.html
